fix: checkbox styling - prevent 'Avoid Similar' from wrapping

--- a/src/style.css
+++ b/src/style.css
@@ -404,7 +404,8 @@ input[type=range]::-webkit-slider-thumb:active {
   display: flex;
   align-items: center;
   column-gap: 5px;
-  width: 100px;
+  min-width: 150px;
+  white-space: nowrap;
   margin-left: 90px;
   margin-right: auto;
 }
